--- a/web/src/org/trimatek/digideal/ui/messages_es.properties
+++ b/web/src/org/trimatek/digideal/ui/messages_es.properties
@@ -13,33 +13,36 @@ page_soon= Próximamente
 page_status= Estado
 page_terms=Términos y condiciones
 form_whom = Quienes
-form_this = El presente acuerdo entre
+form_this = El presente acuerdo entre:
 form_mrmrs = el Sr/a.
 form_name_surname = nombre y apellido
 form_now_on = en adelante
-form_payer_nick = apodo comprador
-form_payer_bitcoin_address = dirección bitcoin comprador
+form_payer_nick = apodo del comprador
+form_payer_bitcoin_address = dirección bitcoin del comprador
 form_payer_email = email del comprador
 form_and = y
-form_collector_nick = apodo vendedor
-form_collector_bitcoin_address = dirección bitcoin vendedor
+form_collector_nick = apodo del vendedor
+form_collector_bitcoin_address = dirección bitcoin del vendedor
 form_collector_email = email del vendedor
 form_how_much = Cuánto
-form_establishes_that = establece que
+form_establishes_that = Establece que:
 form_will_pay = pagará a
 form_sum_of = la suma de
 form_equivalent_to = equivalentes a
 form_condition = Condición
-form_if = si
+form_if = Si:
 form_delivers_in = entrega en:
 form_example_address = por ejemplo: Av. Cabildo 2301, piso 5, dto B, Buenos Aires, Argentina 
 form_example_product_service = descripción del artículo o servicio incluyendo cantidad
 form_the_next = el siguiente:
 form_guarantor = Garante
-form_supervised_by = Operación supervisada por el agente
+form_supervised_by = Operación supervisada por:
 form_description_tooltip = mínimo 4 palabras
 form_name_tooltip = mínimo 2 palabras
 form_enter_captcha = ingresar código
+form_identified_by = identificado por
+form_the_buyer = el comprador
+form_the_agent = el agente
 contract_header = DigiDeal #
 contract_intro = "El presente acuerdo entre
 contract_mr_mrs = el Sr/a.
@@ -92,7 +95,7 @@ btn_back=Volver
 btn_more_info=Ver más
 btn_continue = Continuar
 btn_retry = Reintentar
-data_true=Confirmo la veracidad de los datos 
+data_true= Datos auténticos 
 pdf = Descargar en PDF
 pdf_created_with = Creado con:
 form_support = Soporte
