--- a/web/src/org/trimatek/digideal/ui/messages_pt.properties
+++ b/web/src/org/trimatek/digideal/ui/messages_pt.properties
@@ -13,33 +13,36 @@ page_soon= Em breve
 page_status= Status
 page_terms=Termos e Condições
 form_whom = Quem
-form_this = O seguinte acordo entre
+form_this = O seguinte acordo entre:
 form_mrmrs = Sr./Sra.
 form_name_surname = dado e sobrenome
 form_now_on = a seguir
-form_payer_nick = apelido comprador
+form_payer_nick = apelido do comprador
 form_payer_bitcoin_address = endereço bitcoin do comprador
 form_payer_email = email do comprador
 form_and = e
-form_collector_nick = apelido vendedor
+form_collector_nick = apelido do vendedor
 form_collector_bitcoin_address = endereço bitcoin do vendedor
 form_collector_email = email do vendedor
 form_how_much = Quanto
-form_establishes_that = estabelece que
+form_establishes_that = Estabelece que:
 form_will_pay = vai pagar
 form_sum_of = a total de
 form_equivalent_to = equivalente a
 form_condition = Condição
-form_if =  enquanto 
+form_if =  Enquanto:
 form_delivers_in = entrega em
 form_example_address = e.g.: SES Avenida das Nações Quadra 803 lote 12 CEP 70.200-905, Brasilia DF Brasil
 form_example_product_service = descrição do produto ou serviço, incluindo quantidade
 form_the_next =  Os seguintes
 form_guarantor = Fiador
-form_supervised_by = Operação supervisionada pelo agente
+form_supervised_by = Operação supervisionada por:
 form_description_tooltip = mínimo de 4 palavras
 form_name_tooltip = mínimo de 2 palavras
 form_enter_captcha = coloque o código
+form_identified_by = identificado por
+form_the_buyer = o comprador
+form_the_agent = o agente
 contract_header = DigiDeal #
 contract_intro = "O seguinte acordo 
 contract_mr_mrs = entre Sr./Srs.
@@ -92,7 +95,7 @@ btn_back=Voltar
 btn_more_info=Ver mais
 btn_continue = Continuar
 btn_retry = Tente novamente
-data_true=Eu confirmo a veracidade dos dados
+data_true= Dados autênticos
 pdf = Baixar PDF
 pdf_created_with = Criado com:
 form_support = Suporte
