--- a/web/src/org/trimatek/digideal/ui/messages_en.properties
+++ b/web/src/org/trimatek/digideal/ui/messages_en.properties
@@ -13,7 +13,7 @@ page_soon= Coming soon
 page_status= Status
 page_terms= Terms and conditions
 form_whom = Whom
-form_this = The following agreement between
+form_this = The following agreement between:
 form_mrmrs = Mr./Mrs.
 form_name_surname = given and surname
 form_now_on = hereinafter
@@ -25,21 +25,24 @@ form_collector_nick = sellers' nick
 form_collector_bitcoin_address = sellers' bitcoin address
 form_collector_email = sellers' email
 form_how_much = How much
-form_establishes_that = establishes that
+form_establishes_that = Establishes that:
 form_will_pay = will pay
 form_sum_of = the amount of
 form_equivalent_to = equivalent to
 form_condition = Condition
-form_if = if
+form_if = If:
 form_delivers_in = delivers at
 form_example_address = e.g.: 8936 Myrtle Street, San Diego, CA 92115 
 form_example_product_service = product or service description including quantity
 form_the_next =  the following
 form_guarantor = Guarantor
-form_supervised_by = Operation supervised by the agent
+form_supervised_by = Operation supervised by:
 form_description_tooltip = minimum 4 words
 form_name_tooltip = minimum 2 words
 form_enter_captcha = enter code
+form_identified_by = identified by
+form_the_buyer = the buyer
+form_the_agent = the agent
 contract_header = DigiDeal #
 contract_intro = "The following agreement
 contract_mr_mrs = between Mr./Mrs.
@@ -92,7 +95,7 @@ btn_back=Back
 btn_more_info=See more
 btn_continue=Continue
 btn_retry = Retry
-data_true=I confirm the accuracy of the data
+data_true= Authentic data
 pdf = Download PDF
 pdf_created_with = Created with:
 form_support = Support
