--- a/web/src/org/trimatek/digideal/ui/messages_es.properties
+++ b/web/src/org/trimatek/digideal/ui/messages_es.properties
@@ -13,7 +13,7 @@ page_soon= Próximamente
 page_status= Estado
 page_terms=Términos y condiciones
 form_whom = Quienes
-form_this = El presente acuerdo entre:
+form_this = El presente acuerdo entre
 form_mrmrs = el Sr/a.
 form_name_surname = nombre y apellido
 form_now_on = en adelante
@@ -25,18 +25,18 @@ form_collector_nick = apodo del vendedor
 form_collector_bitcoin_address = dirección bitcoin del vendedor
 form_collector_email = email del vendedor
 form_how_much = Cuánto
-form_establishes_that = Establece que:
+form_establishes_that = Establece que
 form_will_pay = pagará a
 form_sum_of = la suma de
 form_equivalent_to = equivalentes a
 form_condition = Condición
-form_if = Si:
+form_if = Si
 form_delivers_in = entrega en:
 form_example_address = por ejemplo: Av. Cabildo 2301, piso 5, dto B, Buenos Aires, Argentina 
 form_example_product_service = descripción del artículo o servicio incluyendo cantidad
 form_the_next = el siguiente:
 form_guarantor = Garante
-form_supervised_by = Operación supervisada por:
+form_supervised_by = Operación supervisada por
 form_description_tooltip = mínimo 4 palabras
 form_name_tooltip = mínimo 2 palabras
 form_enter_captcha = ingresar código
