--- a/web/src/org/trimatek/digideal/ui/messages_pt.properties
+++ b/web/src/org/trimatek/digideal/ui/messages_pt.properties
@@ -13,7 +13,7 @@ page_soon= Em breve
 page_status= Status
 page_terms=Termos e Condições
 form_whom = Quem
-form_this = O seguinte acordo entre:
+form_this = O seguinte acordo entre
 form_mrmrs = Sr./Sra.
 form_name_surname = dado e sobrenome
 form_now_on = a seguir
@@ -25,18 +25,18 @@ form_collector_nick = apelido do vendedor
 form_collector_bitcoin_address = endereço bitcoin do vendedor
 form_collector_email = email do vendedor
 form_how_much = Quanto
-form_establishes_that = Estabelece que:
+form_establishes_that = Estabelece que
 form_will_pay = vai pagar
 form_sum_of = a total de
 form_equivalent_to = equivalente a
 form_condition = Condição
-form_if =  Enquanto:
+form_if =  Enquanto
 form_delivers_in = entrega em
 form_example_address = e.g.: SES Avenida das Nações Quadra 803 lote 12 CEP 70.200-905, Brasilia DF Brasil
 form_example_product_service = descrição do produto ou serviço, incluindo quantidade
 form_the_next =  Os seguintes
 form_guarantor = Fiador
-form_supervised_by = Operação supervisionada por:
+form_supervised_by = Operação supervisionada por
 form_description_tooltip = mínimo de 4 palavras
 form_name_tooltip = mínimo de 2 palavras
 form_enter_captcha = coloque o código
