--- a/web/src/org/trimatek/digideal/ui/messages_en.properties
+++ b/web/src/org/trimatek/digideal/ui/messages_en.properties
@@ -12,6 +12,7 @@ page_more_info = More info:
 page_soon= Coming soon
 page_status= Status
 page_terms= Terms and conditions
+page_terms_min= terms and conditions
 form_whom = Whom
 form_this = The following agreement between
 form_mrmrs = Mr./Mrs.
@@ -129,7 +130,7 @@ contact_message=Message
 contact_turing=Turing test
 contact_code=Verifier *
 contact_send_fail=CAPTCHA verifier failed, please retry.
-contact_send_success=Message sent
+contact_send_success=Message sent.
 p2sh_subtitle=(Pay to Script Hash)
 p2sh_text_1=It is a technology developed by the Bitcoin community (BIP-16) where the funds are sent to a special address (P2SH multisig address) and they can only be released with a redeem script and an authorized signature.
 p2sh_text_2=The send funds to a P2SH address transaction is stored in the Blockchain and must be confirmed by the miners, same as all other Bitcoin transactions. Funds are safely secured and availability is guaranteed by the decentralized consensus of the network. Only with the private key and the redeem script, those funds can be sent to another address.
@@ -191,7 +192,7 @@ status_required = Value required
 status_address = BTC address
 status_id_tooltip = Agreement ID
 status_result_Done = Done
-status_captcha_fail = Verifier error
+status_captcha_fail = CAPTCHA verifier failed, please retry.
 status_id_fail = Non-existent agreement ID
 status_true = Yes
 status_false = No
@@ -218,6 +219,7 @@ currency_amount = Sum is
 currency_min = less than minimum of 
 currency_required = required
 terms_link = To know terms and conditions, click 
+terms_accept = I accept 
 terms_button = here
 terms_text = DigiDeal is an autonomous service guided by the definitions of the agreement and the actions of the participants. Under normal conditions, there is never human intervention, the whole process is guided by algorithms according to the definitions of the agreement between the parties. The transferred funds are the property of the buyer until the seller sends the receipt code. In case the seller could not demonstrate compliance with the agreement, the funds would be returned to the buyer. The agent will always charge, as a commission, the same amount as the miner's commission that confirms the payment transaction.
 og_description = A Bitcoin-based service to contemporize agreements between people
