--- a/web/src/org/trimatek/digideal/ui/messages_es.properties
+++ b/web/src/org/trimatek/digideal/ui/messages_es.properties
@@ -12,6 +12,7 @@ page_more_info = Más info:
 page_soon= Próximamente
 page_status= Estado
 page_terms=Términos y condiciones
+page_terms_min=términos y condiciones
 form_whom = Quienes
 form_this = El presente acuerdo entre
 form_mrmrs = el Sr/a.
@@ -129,7 +130,7 @@ contact_message=Mensaje
 contact_turing=Prueba de Turing
 contact_code=Verificador *
 contact_send_fail=Error de verificador CAPTCHA, reintentar.
-contact_send_success=Mensaje enviado
+contact_send_success=Mensaje enviado.
 p2sh_subtitle=(Pay to Script Hash)
 p2sh_text_1=Es una tecnología desarrollada por la comunidad Bitcoin (BIP-16) donde los fondos son enviados a una dirección especial (P2SH multisig address) y sólo pueden ser liberados a través de un script de canje (redeem script) y la firma autorizada.
 p2sh_text_2=La transacción de envío de fondos a una dirección P2SH es almacenada en la Blockchain y debe ser confirmada por los mineros, al igual que todas las transacciones Bitcoin. Los fondos quedan a resguardo de forma segura y su disponibilidad está garantizada por el concenso descentralizado de la red. Unicamente con la clave privada y el script de canje, esos fondos pueden ser dirigidos a otra dirección.
@@ -191,7 +192,7 @@ status_required = Valor requerido
 status_address = Dirección BTC
 status_id_tooltip = Identificador de acuerdo
 status_result_Done = Finalizado
-status_captcha_fail = Error de verificador
+status_captcha_fail = Error de verificador CAPTCHA, reintentar.
 status_id_fail = Identificador de acuerdo inexistente
 status_true = Si
 status_false = No
@@ -218,6 +219,7 @@ currency_amount = Monto en
 currency_min = inferior al mínimo de 
 currency_required = requerido
 terms_link = Para conocer términos y condiciones, click 
+terms_accept = Acepto 
 terms_button = aquí
 terms_text = DigiDeal es un servicio autónomo guiado por las definiciones del acuerdo y las acciones de los participantes. En condiciones normales, nunca hay intervención humana, todo el proceso es guiado por algoritmos en función de las definiciones del acuerdo entre las partes. Los fondos tranferidos son propiedad del comprador hasta que el vendedor envía el código de recibo. En caso que el vendedor no pudiera demostrar el cumplimiento del acuerdo, los fondos serían retornados al comprador. El agente siempre cobrará, en concepto de comisión, el mismo importe de la comisión del minero que confirma la transacción de pago.
 og_description = Un servicio Bitcoin para contemporizar compromisos entre personas
