--- a/web/src/org/trimatek/digideal/ui/messages_pt.properties
+++ b/web/src/org/trimatek/digideal/ui/messages_pt.properties
@@ -12,6 +12,7 @@ page_more_info = Mais Informações:
 page_soon= Em breve
 page_status= Status
 page_terms=Termos e Condições
+page_terms_min=termos e condições
 form_whom = Quem
 form_this = O seguinte acordo entre
 form_mrmrs = Sr./Sra.
@@ -129,7 +130,7 @@ contact_message=Mensagem
 contact_turing=Teste de Turing
 contact_code=Verificador *
 contact_send_fail=O verificador de CAPTCHA falhou, tente novamente.
-contact_send_success=Mensagem enviado
+contact_send_success=Mensagem enviado.
 p2sh_subtitle=(Pay to Script Hash)
 p2sh_text_1=É uma tecnologia desenvolvida pela comunidade Bitcoin (BIP-16) onde os fundos são enviados para um endereço especial (endereço multisig P2SH) e só podem ser liberados com um script de resgate (redeem script) e uma assinatura autorizada.
 p2sh_text_2=O envio de fundos para uma transação de endereço P2SH é armazenado no Blockchain e deve ser confirmado pelos mineiros, o mesmo que todas as outras transações Bitcoin. Os fundos são protegidos com segurança e a disponibilidade é garantida pelo consenso descentralizado da rede. Apenas com a chave privada e o script de resgate, esses fundos podem ser enviados para outro endereço.
@@ -191,7 +192,7 @@ status_required = Valor requerido
 status_address = Endereço BTC
 status_id_tooltip = ID do acordo
 status_result_Done = Feito
-status_captcha_fail = Erro do verificador
+status_captcha_fail = O verificador de CAPTCHA falhou, tente novamente.
 status_id_fail = ID de  inexistente
 status_true = Sim
 status_false = Não
@@ -218,6 +219,7 @@ currency_amount = Total é
 currency_min = menos do que o mínimo de 
 currency_required = requeridos
 terms_link = Para conhecer os termos e condições, clique em 
+terms_accept = Eu aceito 
 terms_button = aqui
 terms_text = DigiDeal é um serviço autônomo orientado pelas definições do acordo e pelas ações dos participantes. Em condições normais, nunca há intervenção humana, todo o processo é guiado por algoritmos de acordo com as definições do acordo entre as partes. Os fundos transferidos são de propriedade do comprador até que o vendedor envie o código de recebimento. Caso o vendedor não demonstrasse conformidade com o , os fundos seriam devolvidos ao comprador. O agente cobrará sempre, como uma comissão, o mesmo valor que a comissão do mineiro que confirma a transação de pagamento.
 og_description = Um serviço Bitcoin para contemporizar os acordos das pessoas
