--- a/web/src/org/trimatek/digideal/ui/messages_en.properties
+++ b/web/src/org/trimatek/digideal/ui/messages_en.properties
@@ -44,6 +44,13 @@ form_enter_captcha = enter code
 form_identified_by = identified by
 form_the_buyer = the buyer
 form_the_agent = the agent
+form_wizard = Wizard: 
+wizard_whom = Whom
+wizard_how_much = How much
+wizard_condition = Condition
+wizard_supervisor = Supervision
+wizard_btn_next = Next
+wizard_btn_back = Previous
 contract_header = DigiDeal #
 contract_intro = "The following agreement
 contract_mr_mrs = between Mr./Mrs.
