--- a/web/src/org/trimatek/digideal/ui/messages_es.properties
+++ b/web/src/org/trimatek/digideal/ui/messages_es.properties
@@ -44,6 +44,13 @@ form_enter_captcha = ingresar código
 form_identified_by = identificado por
 form_the_buyer = el comprador
 form_the_agent = el agente
+form_wizard = Asistente: 
+wizard_whom = Quiénes
+wizard_how_much = Cuánto
+wizard_condition = Condición
+wizard_supervisor = Supervisión
+wizard_btn_next = Siguiente
+wizard_btn_back = Anterior
 contract_header = DigiDeal #
 contract_intro = "El presente acuerdo entre
 contract_mr_mrs = el Sr/a.
