--- a/web/src/org/trimatek/digideal/ui/messages_pt.properties
+++ b/web/src/org/trimatek/digideal/ui/messages_pt.properties
@@ -44,6 +44,13 @@ form_enter_captcha = coloque o código
 form_identified_by = identificado por
 form_the_buyer = o comprador
 form_the_agent = o agente
+form_wizard = Assistente: 
+wizard_whom = O qual
+wizard_how_much = Quantos
+wizard_condition = Condição
+wizard_supervisor = Supervisão
+wizard_btn_next = Próximo
+wizard_btn_back = Anterior
 contract_header = DigiDeal #
 contract_intro = "O seguinte acordo 
 contract_mr_mrs = entre Sr./Srs.
