--- a/web/src/org/trimatek/digideal/ui/messages_en.properties
+++ b/web/src/org/trimatek/digideal/ui/messages_en.properties
@@ -51,6 +51,7 @@ wizard_condition = Condition
 wizard_supervisor = Supervision
 wizard_btn_next = Next
 wizard_btn_back = Previous
+wizard_last = Now accept Terms and Conditions and Preview
 contract_header = DigiDeal #
 contract_intro = "The following agreement
 contract_mr_mrs = between Mr./Mrs.
