--- a/web/src/org/trimatek/digideal/ui/messages_es.properties
+++ b/web/src/org/trimatek/digideal/ui/messages_es.properties
@@ -51,6 +51,7 @@ wizard_condition = Condición
 wizard_supervisor = Supervisión
 wizard_btn_next = Siguiente
 wizard_btn_back = Anterior
+wizard_last = <i>Para finalizar aceptar <b>términos y condiciones</b> y <b>Previsualizar</b></i>
 contract_header = DigiDeal #
 contract_intro = "El presente acuerdo entre
 contract_mr_mrs = el Sr/a.
