--- a/web/src/org/trimatek/digideal/ui/messages_pt.properties
+++ b/web/src/org/trimatek/digideal/ui/messages_pt.properties
@@ -51,6 +51,7 @@ wizard_condition = Condição
 wizard_supervisor = Supervisão
 wizard_btn_next = Próximo
 wizard_btn_back = Anterior
+wizard_last = Agora aceite os Termos e Condições e visualize
 contract_header = DigiDeal #
 contract_intro = "O seguinte acordo 
 contract_mr_mrs = entre Sr./Srs.
