--- a/web/src/org/trimatek/digideal/ui/messages_en.properties
+++ b/web/src/org/trimatek/digideal/ui/messages_en.properties
@@ -51,7 +51,7 @@ wizard_condition = Condition
 wizard_supervisor = Supervision
 wizard_btn_next = Next
 wizard_btn_back = Previous
-wizard_last = Now accept Terms and Conditions and Preview
+wizard_last = <i>Finally accept <b>terms and conditions</b> and <b>Preview</b></i>
 contract_header = DigiDeal #
 contract_intro = "The following agreement
 contract_mr_mrs = between Mr./Mrs.
@@ -104,6 +104,7 @@ btn_back=Back
 btn_more_info=See more
 btn_continue=Continue
 btn_retry = Retry
+btn_preview=Preview
 data_true= Authentic data
 pdf = Download PDF
 pdf_created_with = Created with:
