--- a/web/src/org/trimatek/digideal/ui/messages_pt.properties
+++ b/web/src/org/trimatek/digideal/ui/messages_pt.properties
@@ -51,7 +51,7 @@ wizard_condition = Condição
 wizard_supervisor = Supervisão
 wizard_btn_next = Próximo
 wizard_btn_back = Anterior
-wizard_last = Agora aceite os Termos e Condições e visualize
+wizard_last = <i>Finalmente aceite os <b>termos e condições</b> y <b>Preview</b></i>
 contract_header = DigiDeal #
 contract_intro = "O seguinte acordo 
 contract_mr_mrs = entre Sr./Srs.
@@ -104,6 +104,7 @@ btn_back=Voltar
 btn_more_info=Ver mais
 btn_continue = Continuar
 btn_retry = Tente novamente
+btn_preview=Preview
 data_true= Dados autênticos
 pdf = Baixar PDF
 pdf_created_with = Criado com:
