--- a/web/src/org/trimatek/digideal/ui/messages_es.properties
+++ b/web/src/org/trimatek/digideal/ui/messages_es.properties
@@ -104,6 +104,7 @@ btn_back=Volver
 btn_more_info=Ver más
 btn_continue = Continuar
 btn_retry = Reintentar
+btn_preview=Previsualizar
 data_true= Datos auténticos 
 pdf = Descargar en PDF
 pdf_created_with = Creado con:
