--- a/web/src/org/trimatek/digideal/ui/messages_en.properties
+++ b/web/src/org/trimatek/digideal/ui/messages_en.properties
@@ -4,8 +4,8 @@ page_contact = Contact
 page_faq = Frequently asked questions
 page_usecases = Use Cases
 page_robot = DigiDeal Robot
-page_p2sh_oracle = P2SH - Oracle
 page_p2sh = P2SH
+page_smartc = Smart contracts
 page_result = Result
 page_search = Search
 page_more_info = More info:
@@ -13,6 +13,8 @@ page_soon= Coming soon
 page_status= Status
 page_terms= Terms and conditions
 page_terms_min= terms and conditions
+page_sources = Sources:
+page_api = API
 form_whom = Whom
 form_this = The following agreement between
 form_mrmrs = Mr./Mrs.
@@ -118,13 +120,16 @@ main_title_how = How does it work?
 main_title_for = What is it for?
 menu_contact_us= Contact
 menu_about_us= About
-menu_wiki = Wiki
+menu_wiki = Info
 menu_faq = FAQ
-menu_wiki_technology = P2SH / Oracle
+menu_wiki_p2sh = Pay to Script Hash
+menu_wiki_oracle= Oracle
 menu_wiki_robot = DigiDeal Robot
 menu_wiki_use_cases = Use cases
+menu_wiki_smartc = Smart Contracts
 menu_search = Search
 menu_status = Track
+menu_api = API
 main_subtitle= A digital deal to simplify and speed up the exchange of products and services. DigiDeal is a standalone service for Bitcoin technology, at Internet scale and designed to contemporize agreements between people. Once a new deal is created, DigiBot guides and coordinates the whole process via email.
 main_what_synthesis=It is a payment system where the funds are sent to a neutral address within the Blockchain. There, they stay in custody until the agreement is fulfilled from both parties. Then, DigiBot validates the operation and releases the funds, once it receives the receipt code.
 main_for_synthesis=The agreement form allows any kind of commitment to be established between the parties. Once the buyer sends the funds, DigiBot notifies the seller that the product or service can be delivered. The funds are released only when the agreement is fulfilled.
@@ -141,9 +146,15 @@ contact_code=Verifier *
 contact_send_fail=CAPTCHA verifier failed, please retry.
 contact_send_success=Message sent.
 p2sh_subtitle=(Pay to Script Hash)
+smartc_subtitle=
+oracle_subtitle=
+api_subtitle=(Application Programming Interface)
 p2sh_text_1=It is a technology developed by the Bitcoin community (BIP-16) where the funds are sent to a special address (P2SH multisig address) and they can only be released with a redeem script and an authorized signature.
 p2sh_text_2=The send funds to a P2SH address transaction is stored in the Blockchain and must be confirmed by the miners, same as all other Bitcoin transactions. Funds are safely secured and availability is guaranteed by the decentralized consensus of the network. Only with the private key and the redeem script, those funds can be sent to another address.
 p2sh_text_3=As the figure shows, for a P2SH transaction to be spent (TX1), a third party (Bob) must provide the signature from his private key and the complete redeem script. The peer-to-peer network of Bitcoin verifies that the hash provided by Bob is the same associated with the output of TX1.
+smartc_text_1=A smart contract is a self-enforcing agreement embedded in computer code managed by a blockchain. The code contains a set of rules under which the parties of that smart contract agree to interact with each other. If and when the prede ned rules are met, the agreement is automatically enforced. Smart contracts provide mechanisms for e ciently managing tokenized assets and access rights between two or more parties. One can think of it like a cryptographic box that unlocks value or access, if and when specific predefined conditions are met. 
+smartc_text_2=Smart contracts permit trusted transactions and agreements to be carried out among disparate, anonymous parties without the need for a central authority, legal system, or external enforcement mechanism. They render transactions traceable, transparent, and irreversible.
+smartc_text_3=<br/><b>Key Takeaways:</b> <br/>&nbsp;&#8226; Smart contracts are self-executing contracts with the terms of the agreement between buyer and seller being directly written into lines of code. <br/>&nbsp;&#8226; Nick Szabo, an American computer scientist who invented a virtual currency called "Bit Gold" in 1998, defined smart contracts as computerized transaction protocols that execute terms of a contract. <br/>&nbsp;&#8226; Smart contracts render transactions traceable, transparent, and irreversible.<br/><br/>The service offered by DigiDeal, can be considered as an implementation of the concept.
 robot_text_0=The robot validates the agreement, interacts with the Blockchain creating and searching for transactions, it also authorizes the fund release if it receives the information to certify that the agreement is fulfilled. See next a representation of the process:  
 robot_text_1=1\uFE0F\u20E3 The buyer or seller creates a new agreement from the <a target="_blank" style="color: #1da1f2;" href="./form.xhtml">form</a>
 robot_text_2=2\uFE0F\u20E3 DigiBot validates the agreement and sends emails with the instructions
