--- a/web/src/org/trimatek/digideal/ui/messages_es.properties
+++ b/web/src/org/trimatek/digideal/ui/messages_es.properties
@@ -4,8 +4,8 @@ page_contact = Contacto
 page_faq = Preguntas frecuentes
 page_usecases = Casos de Uso
 page_robot = DigiDeal
-page_p2sh_oracle = P2SH - Oracle
 page_p2sh = P2SH
+page_smartc = Contratos inteligentes
 page_result = Resultado
 page_search = Buscar
 page_more_info = Más info:
@@ -13,6 +13,8 @@ page_soon= Próximamente
 page_status= Estado
 page_terms=Términos y condiciones
 page_terms_min=términos y condiciones
+page_sources=Fuentes:
+page_api = API
 form_whom = Quienes
 form_this = El presente acuerdo entre
 form_mrmrs = el Sr/a.
@@ -118,13 +120,16 @@ main_title_how = ¿Cómo funciona?
 main_title_for = ¿Para qué?
 menu_contact_us= Contacto
 menu_about_us = Acerca de
-menu_wiki = Wiki
+menu_wiki = Info
 menu_faq = FAQ
-menu_wiki_technology = P2SH / Oracle
+menu_wiki_p2sh = Pay to Script Hash
+menu_wiki_oracle= Oracle
 menu_wiki_robot = Robot DigiDeal
 menu_wiki_use_cases = Casos de Uso
+menu_wiki_smartc = Smart contracts
 menu_search = Buscar
 menu_status = Track
+menu_api = API
 main_subtitle= Un acuerdo digital para simplificar y agilizar el intercambio de productos y servicios. DigiDeal es un servicio autónomo basado en tecnología Bitcoin y a escala de Internet, para contemporizar compromisos entre personas. Una vez creado el nuevo acuerdo, DigiBot guía y coordina todo el proceso por email.
 main_what_synthesis=Es un sistema de pago donde los fondos son enviados a una dirección neutral en la Blockchain y quedan en custodia hasta que se cumpla el acuerdo entre las partes. DigiBot valida la operación y libera los fondos una vez que recibe el código que certifica la entrega.
 main_for_synthesis=El formulario de acuerdo permite establecer cualquier tipo de compromiso entre partes. Una vez que el comprador envía los fondos, DigiBot notifica al vendedor que puede entregar el producto o servicio acordado. Los fondos son liberados sólo cuando el acuerdo se ha cumplido.
@@ -141,9 +146,15 @@ contact_code=Verificador *
 contact_send_fail=Error de verificador CAPTCHA, reintentar.
 contact_send_success=Mensaje enviado.
 p2sh_subtitle=(Pay to Script Hash)
+smartc_subtitle=(Smart contracts)
+oracle_subtitle=(Oráculo)
+api_subtitle=(Application Programming Interface)
 p2sh_text_1=Es una tecnología desarrollada por la comunidad Bitcoin (BIP-16) donde los fondos son enviados a una dirección especial (P2SH multisig address) y sólo pueden ser liberados a través de un script de canje (redeem script) y la firma autorizada.
 p2sh_text_2=La transacción de envío de fondos a una dirección P2SH es almacenada en la Blockchain y debe ser confirmada por los mineros, al igual que todas las transacciones Bitcoin. Los fondos quedan a resguardo de forma segura y su disponibilidad está garantizada por el concenso descentralizado de la red. Unicamente con la clave privada y el script de canje, esos fondos pueden ser dirigidos a otra dirección.
 p2sh_text_3=Como muestra la figura, para que una transacción P2SH pueda ser gastada (TX1), un tercero (Bob) debe proveer la firma a partir de su clave privada y el script de de canje completo. La red peer-to-peer de Bitcoin comprueba que el hash provisto por Bob sea el mismo asociado a la salida de la TX1.
+smartc_text_1=Un contrato inteligente es un acuerdo autoejecutable administrado por una blockchain. El código define un conjunto de reglas bajo las cuales las partes acuerdan interactuar entre sí. Si se cumplen las reglas predefinidas, el acuerdo se aplica automáticamente. Los contratos inteligentes proporcionan mecanismos para administrar eficientemente los activos tokenizados y derechos de acceso entre dos o más partes. Se los puede pensar como una caja criptográfica que desbloquea valor o acceso, siempre y cuando se cumplan condiciones predefinidas.
+smartc_text_2=Los contratos inteligentes permiten realizar transacciones y acuerdos confiables entre partes dispares y anónimas sin la necesidad de una autoridad central, un sistema legal o un mecanismo de cumplimiento externo. Hacen transacciones trazables, transparentes e irreversibles.
+smartc_text_3=<br/><b>Aspectos clave:</b> <br/>&nbsp;&#8226; Los contratos inteligentes son contratos autoejecutables con los términos del acuerdo entre el comprador y el vendedor que se escriben directamente en líneas de código. <br/>&nbsp;&#8226; Nick Szabo, un científico informático estadounidense que inventó una moneda virtual llamada "Bit Gold" en 1998, definió los contratos inteligentes como protocolos de transacción computarizados que ejecutan los términos de un contrato.<br/>&nbsp;&#8226; Los contratos inteligentes hacen que las transacciones sean trazables, transparentes e irreversibles.<br/><br/>El servicio ofrecido por DigiDeal, puede considerarse como una implementación del concepto.
 robot_text_0=El robot valida el acuerdo, interactúa con la Blockchain creando y buscando transacciones, y autoriza el desbloqueo de fondos, si recibe la información que certifique el cumplimiento del acuerdo. A continuación una representación del proceso:  
 robot_text_1=1\uFE0F\u20E3 El comprador o vendedor crea un nuevo acuerdo desde el <a target="_blank" style="color: #1da1f2;" href="./form.xhtml">formulario</a>
 robot_text_2=2\uFE0F\u20E3 DigiBot valida el acuerdo y envía un mail a los participantes con las instrucciones
