--- a/web/src/org/trimatek/digideal/ui/messages_pt.properties
+++ b/web/src/org/trimatek/digideal/ui/messages_pt.properties
@@ -4,8 +4,8 @@ page_contact = Contato
 page_faq = Perguntas frequentes
 page_usecases = Casos de Uso
 page_robot = DigiDeal
-page_p2sh_oracle = P2SH - Oracle
 page_p2sh = P2SH
+page_smartc = Contratos inteligentes
 page_result = Resultado
 page_search = Procurar
 page_more_info = Mais Informações:
@@ -13,6 +13,8 @@ page_soon= Em breve
 page_status= Status
 page_terms=Termos e Condições
 page_terms_min=termos e condições
+page_sources = Fontes:
+page_api = API
 form_whom = Quem
 form_this = O seguinte acordo entre
 form_mrmrs = Sr./Sra.
@@ -118,13 +120,16 @@ main_title_how = Como funciona?
 main_title_for = Para que?
 menu_contact_us= Contato
 menu_about_us = Sobre nós
-menu_wiki = Wiki
+menu_wiki = Info
 menu_faq = FAQ
-menu_wiki_technology = P2SH / Oracle
+menu_wiki_p2sh = Pay to Script Hash
+menu_wiki_oracle= Oracle
 menu_wiki_robot = Robô DigiDeal
 menu_wiki_use_cases = Casos de uso
+menu_wiki_smartc = Smart contracts
 menu_search = Procurar
 menu_status = Rastrear
+menu_api = API
 main_subtitle= Um acordo digital para simplificar e acelerar o intercâmbio de produtos e serviços. DigiDeal é um serviço autônomo para a tecnologia Bitcoin em escala de Internet, projetado para contemporizar os acordos das pessoas. Uma vez que um novo acordo é criado, o DigiBot orienta e coordena todo o processo via e-mail.
 main_what_synthesis=É um sistema de pagamento onde os fundos são enviados para um endereço neutro dentro do Blockchain. Lá eles ficam em custódia até que o acordo seja cumprido por ambas as partes. Em seguida, DigiBot valida a operação e libera os fundos, uma vez que recebe o código de recebimento.
 main_for_synthesis=O formulário de acordo permite estabelecer qualquer tipo de compromisso entre as partes. Depois que o comprador envia os fundos, DigiBot notifica ao vendedor que o produto ou serviço pode ser entregue. Os fundos são liberados somente quando o acordo é cumprido em sua totalidade.     
@@ -141,9 +146,15 @@ contact_code=Verificador *
 contact_send_fail=O verificador de CAPTCHA falhou, tente novamente.
 contact_send_success=Mensagem enviado.
 p2sh_subtitle=(Pay to Script Hash)
+smartc_subtitle=(Smart contracts)
+oracle_subtitle=(Oráculo)
+api_subtitle=(Application Programming Interface)
 p2sh_text_1=É uma tecnologia desenvolvida pela comunidade Bitcoin (BIP-16) onde os fundos são enviados para um endereço especial (endereço multisig P2SH) e só podem ser liberados com um script de resgate (redeem script) e uma assinatura autorizada.
 p2sh_text_2=O envio de fundos para uma transação de endereço P2SH é armazenado no Blockchain e deve ser confirmado pelos mineiros, o mesmo que todas as outras transações Bitcoin. Os fundos são protegidos com segurança e a disponibilidade é garantida pelo consenso descentralizado da rede. Apenas com a chave privada e o script de resgate, esses fundos podem ser enviados para outro endereço.
 p2sh_text_3=Como mostra a figura, para uma transação P2SH ser usada (TX1), um terceiro (Bob) deve fornecer a assinatura de sua chave privada e o script de resgate completo. A rede peer-to-peer do Bitcoin verifica se o hash fornecido por Bob é o mesmo associado à saída do TX1.
+smartc_text_1=Um contrato inteligente é um contrato auto-impingido embutido em código de computador gerenciado por um blockchain. O código contém um conjunto de regras sob as quais as partes desse contrato inteligente concordam em interagir umas com as outras. Se e quando as regras predefinidas forem cumpridas, o contrato será automaticamente aplicado. Contratos inteligentes fornecem mecanismos para gerenciar eficientemente ativos tokenizados e direitos de acesso entre duas ou mais partes. Pode-se pensar nisso como uma caixa criptográfica que desbloqueia valor ou acesso, se e quando condições pré-definidas específicas são atendidas.
+smartc_text_2=Os contratos inteligentes permitem que transações e acordos confiáveis sejam realizados entre partes distintas e anônimas sem a necessidade de uma autoridade central, sistema legal ou mecanismo de execução externa. Eles tornam as transações rastreáveis, transparentes e irreversíveis.
+smartc_text_3=<br/><b>Principais descobertas:</b> <br/>&nbsp;&#8226; Contratos inteligentes são contratos autoexecutáveis, com os termos do contrato entre comprador e vendedor sendo escritos diretamente em linhas de código. <br/>&nbsp;&#8226; Nick Szabo, um cientista da computação americano que inventou uma moeda virtual chamada "Bit Gold" em 1998, definiu contratos inteligentes como protocolos de transação informatizados que executam os termos de um contrato.<br/>&nbsp;&#8226; Contratos inteligentes tornam as transações rastreáveis, transparentes e irreversíveis.<br/><br/>O serviço oferecido pelo DigiDeal, pode ser considerado como uma implementação do conceito.
 robot_text_0=O robô valida o acordo, interage com o Blockchain criando e buscando transações, também autoriza a liberação do fundo se receber as informações para certificar que o acordo foi cumprido. Veja a seguir uma representação do processo:  
 robot_text_1=1\uFE0F\u20E3 O comprador ou vendedor cria um novo  a partir do <a target="_blank" style="color: #1da1f2;" href="./form.xhtml">formulário</a>
 robot_text_2=2\uFE0F\u20E3 DigiBot valida o  e envia um email com as instruções para ambas as partes
