currency combo fix

--- a/web/src/org/trimatek/digideal/ui/messages_pt.properties
+++ b/web/src/org/trimatek/digideal/ui/messages_pt.properties
@@ -72,7 +72,7 @@ contract_date = Criado em:
 preview_tooltip = Pressione para visualizar o acordo
 contract = Acordo
 msg_welcome=Bem-vindo!
-msg_welcome_detail=Por favor, preencha o próximo formulário para criar um novo acordo digital.
+msg_welcome_detail=Por favor, preencha o formulário para criar um novo acordo digital.
 msg_captcha=Captcha
 error_name=Nome e sobrenome
 error_email=Email
@@ -126,7 +126,7 @@ menu_wiki_p2sh = Pay to Script Hash
 menu_wiki_oracle= Oracle
 menu_wiki_robot = Robô DigiDeal
 menu_wiki_use_cases = Casos de uso
-menu_wiki_smartc = Smart contracts
+menu_wiki_smartc = Smart contract
 menu_search = Procurar
 menu_status = Rastrear
 menu_api = API
@@ -146,7 +146,7 @@ contact_code=Verificador *
 contact_send_fail=O verificador de CAPTCHA falhou, tente novamente.
 contact_send_success=Mensagem enviado.
 p2sh_subtitle=(Pay to Script Hash)
-smartc_subtitle=(Smart contracts)
+smartc_subtitle=(Smart contract)
 oracle_subtitle=(Oráculo)
 api_subtitle=(Application Programming Interface)
 p2sh_text_1=É uma tecnologia desenvolvida pela comunidade Bitcoin (BIP-16) onde os fundos são enviados para um endereço especial (endereço multisig P2SH) e só podem ser liberados com um script de resgate (redeem script) e uma assinatura autorizada.
@@ -170,7 +170,7 @@ robot_right_arrow=\uD83D\uDC49
 robot_finish=\uD83C\uDFC1
 robot_subtitle = Como se usa?
 robot_fee = Quanto custa?
-robot_fee_detail = Na etapa 7, DigiBot valida o código de recebimento e desbloqueia os fundos. Nesta transação, ele cobra seus serviços subtraindo do a quantidade em custódia, um valor igual à comissão cobrada por um minerador para processar aquela transação de 1 entrada e 2 saídas (aproximadamente US$ 0.62).
+robot_fee_detail = Na etapa 7, DigiBot valida o código de recebimento e desbloqueia os fundos. Nesta transação, ele cobra seus serviços subtraindo do a quantidade em custódia, um valor igual à comissão cobrada por um minerador para processar aquela transação de 1 entrada e 2 saídas (aproximadamente US$ 1.15).
 cases_subtitle= Alguns exemplos
 cases_c1_title= Trabalhos de pintura
 cases_c1_text1= @Anita precisa de alguns trabalhos de pintura em sua casa e @João, o pintor, não quer ter dificuldades para receber o pagamento. Então, um DigiDeal é criado, Anita envia fundos e João inicia o trabalho sem dúvida. Quando o trabalho estiver concluído, Anita mostrará o código de recibo para João e todos ficarão felizes!
@@ -187,9 +187,9 @@ faq_g1_title = Costo
 faq_g1_title1 = Qual é a taxa paga pelo comprador?
 faq_g1_text1 = O comprador só deve ser responsável pelo custo da transação para enviar os fundos.
 faq_g1_title2 = Qual o custo extra que o vendedor deve pagar?
-faq_g1_text2 = Ao desbloquear os fundos em custódia, o custo da transação é pago à minerador e o mesmo valor é pago, como comissão pela DigiDeal (aproximadamente US$ 1.55 no total). 
+faq_g1_text2 = Ao desbloquear os fundos em custódia, o custo da transação é pago à minerador e o mesmo valor é pago, como comissão pela DigiDeal (aproximadamente US$ 1.15). 
 faq_g1_title3 = O custo do DigiDeal é fixo?
-faq_g1_text3 = Sempre, mesmo que o  seja de US$ 10 ou US$ 10.000, a comissão do DigiDeal será sempre a mesma. A mesma taxa (fee) que o mineiro cobra para processar a transação de pagamento (etapa 7 do <a target="_blank" style="color: #1da1f2;" href="./robot.xhtml"> processo </ a> ).
+faq_g1_text3 = Sempre, mesmo que o  seja de US$ 10 ou US$ 10.000, a comissão do DigiDeal será sempre a mesma. A mesma taxa (fee) que o mineiro cobra para processar a transação de pagamento (etapa 7 do <a target="_blank" style="color: #1da1f2;" href="./robot.xhtml">processo</a>).
 faq_g2_title = Tecnologia
 faq_g2_title1 = Por que é inovador DigiDeal?
 faq_g2_text1 = Porque durante o processo normal de concordância, não há intervenção humana. As ações dos participantes são avaliadas por algoritmos que decidem se o ambiente é ajustado ao que está definido no .
